--- a/src/app/home/component/body/body.component.scss
+++ b/src/app/home/component/body/body.component.scss
@@ -6,7 +6,7 @@
     align-content: center;
     justify-content: center;
     gap: 20px;
-    margin-top: 20px;
+    margin: 20px 20px 0px 20px ;
     max-width:2400px;
 }
 
